testing jquery on profile page

--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -49,8 +49,8 @@
             </div>
             <div class="input-group mb-3">
                 <select class="custom-select" id="series_drop_down">
-                    <option selected>Choose Series</option>
-                    <option value="CUP">CUP</option>
+                    <option>Choose Series</option>
+                    <option selected value="CUP">CUP</option>
                     <option value="XFINITY">XFINITY</option>
                     <option value="TRUCK">TRUCK</option>
                 </select>
