--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -59,7 +59,7 @@
                 <select class="custom-select" id="races_drop_down">
                     <option selected>Choose Race</option>
                     {% for race in races %}
-                       {% if request.form.get('series_drop_down') == race['series'] %}
+                       {% if request.form.get('#series_drop_down') == race['series'] %}
                     <option value="{{ race['race_id'] }}">{{ race['race_name']  }} @ {{  race['track']  }}</option>
                        {% endif %}
                     {% endfor %}
