--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -48,21 +48,19 @@
                 <input type="text" id="typeEntrantOther" class="form-control" name="type" value="races" readonly>
             </div>
             <div class="input-group mb-3">
-                <select class="custom-select" id="series_drop_down" name="series_drop_down">
+                <a href="#" id="process_input"><select class="custom-select" id="series_drop_down" name="series_drop_down">
                     <option>Choose Series</option>
                     <option selected value="CUP">CUP</option>
                     <option value="XFINITY">XFINITY</option>
                     <option value="TRUCK">TRUCK</option>
-                </select>
+                </select></a>
             </div>
             <div class="input-group mb-3">
                 <select class="custom-select" id="races_drop_down">
-                    <option selected>Choose Race</option>
-                    {% for race in races %}
-                       {% if race['series'] == request.form.get['series_drop_down'] %}
-                    <option value="{{ race['race_id'] }}">{{ race['race_name']  }} @ {{  race['track']  }}</option>
-                       {% endif %}
-                    {% endfor %}
+                    <option >Choose Race</option>
+
+                    <option selected value="na"></option>
+
                 </select>
             </div>
             <div class="form-group col-md-6" id="entrant_file">
@@ -120,7 +118,17 @@ $('#loadQualify').hide();
     } else {
     alert ("Nothing was chosen which shouldnt happen")
     }
-}); //end radio\
+}); //end radio
+$(function() {
+    $('a#process_input').bind('change', function() {
+        $.getJSON('/background_process', {
+        series_choice: $('#series_drop_down:selected').val(),
+        }, function(data) {
+        $("#races_drop_down:selected").text(data.result);
+        });
+        return false;
+    });
+});
 }); //end ready
 </script>
 {% endblock %}
