testing jquery on profile page

--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -48,7 +48,7 @@
                 <input type="text" id="typeEntrantOther" class="form-control" name="type" value="races" readonly>
             </div>
             <div class="input-group mb-3">
-                <a href="#" id="process_input"><select class="custom-select" id="series_drop_down" name="series_drop_down">
+                <a href="#" id="process_input1"><select class="custom-select" id="series_drop_down" name="series_drop_down">
                     <option>Choose Series</option>
                     <option selected value="CUP">CUP</option>
                     <option value="XFINITY">XFINITY</option>
@@ -62,6 +62,10 @@
                     <option selected value="na"></option>
 
                 </select>
+        <form>
+            <input type="text" size="5" name="prolang">
+            <a href="#" id="process_input"><button class="btn btn=default">Submit</button></a>
+        </form>
    <p id="result"></p>
             </div>
             <div class="form-group col-md-6" id="entrant_file">
