testing jquery on profile page

--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -125,7 +125,7 @@ $('#loadQualify').hide();
     }
 }); //end radio
 $(function() {
-    $('a#process_input').bind('click', function() {
+    $('#process_input').bind('click', function() {
         $.getJSON('/background_process', {
         "stuff": $('input[name="stuff"]').val(),
         }, function(data) {
