--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -9,7 +9,7 @@
                 <input type="text" size="5" name="proglang">
                 <a href="#" id="process_input"><button class="btn btn-default">Submit</button></a>
             </form>
-        <p id="result"></p>
+        <h2 id="result"></h2>
     </div>
 <script>
 $(document).ready(function() {
