--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -9,7 +9,7 @@
                 <input type="text" size="5" name="proglang">
                 <a href="#" id="process_input"><button class="btn btn-default">Submit</button></a>
             </form>
-        <h2 id="result"></h2>
+        <h3 id="result"></h3>
     </div>
 <script>
 $(document).ready(function() {
@@ -17,7 +17,7 @@ $(document).ready(function() {
     $.getJSON('/background_process', {
     proglang: $('input[name="proglang"]').val(),
     }, function(data) {
-    $("#result").text(data.result);
+    $('#result').text(data.result);
     });
     return false
   });
