--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -15,9 +15,9 @@
 $(document).ready(function() {
     $('a#process_input').bind('click', function() {
     $.getJSON('/background_process', {
-    proglang: $('input[name="proglang"]').val(),
+    'proglang' : $('input[name="proglang"]').val(),
     }, function(data) {
-    $('#result').title(data.result);
+    $('#result').innerText(data.result);
     });
     return false
   });
