testing jquery on profile page

--- a/src/templates/nascar_admin.html
+++ b/src/templates/nascar_admin.html
@@ -99,6 +99,7 @@
 </div>
 <script>
 $(document).ready(function() {
+$('#result').text('this stuff')
 $('#loadRaces').hide();
 $('#loadEntrants').hide();
 $('#loadQualify').hide();
