--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -3,14 +3,14 @@
 <head>
     <script>
     $(document).ready(function() {
-    $('#text_input').change(function() {
+    $('#process_input').bind('click', function() {
     $.getJSON('/background_process', {
     'proglang' : $('input[name="proglang"]').val(),
     }, function(data) {
     $("#result").text(data.result);
-    }
+
     });
-    return false
+    return false;
     });
     });
     </script>
