--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -6,7 +6,7 @@
     $('#process_input').bind('click', function() {
     $.ajax({
     type: "GET"
-    url: /backgroundProcess,
+    url: '/backgroundProcess',
     processData = true,
     data: {},
     dataType:"json",
