--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -5,7 +5,7 @@
     $(document).ready(function() {
     $('#process_input').bind('click', function() {
     $.ajax({
-    type: "GET"
+    type: "GET",
     url: '/backgroundProcess',
     processData = true,
     data: {},
