--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -7,7 +7,7 @@
     $.ajax({
     type: "GET",
     url: "/backgroundProcess",
-    processData = "true",
+    processData: "true",
     data: {},
     dataType:"json",
     success: function(json) {
