--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -8,7 +8,7 @@
     type: "GET",
     url: "/backgroundProcess",
     processData: "true",
-    data: {},
+    data: result,
     dataType:"json",
     success: function(json) {
     alert("success");
