--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -11,7 +11,7 @@
     data: "result",
     dataType:"json",
     success: function(data) {
-    $("#result").text(data.result);
+    $("#result").text(data.race_name);
     },
     error: function(x,y,z) {
     console.log(x);
