--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -9,7 +9,7 @@
     url: "/backgroundProcess",
     processData: "true",
     data: "result",
-    dataType:"json",
+    dataType:"text",
     success: function(data) {
     $("#result").text(data.result);
     },
