--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -19,7 +19,7 @@
     type: "GET",
     url: "/backgroundProcess",
     processData: "true",
-
+    data: $('#text_input").val()
     dataType:"text",
     success: function(data) {
     $("#result").text(data.result);
