--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -22,7 +22,7 @@
     data: {proglang: $('input[name="proglang"]').val()},
     dataType:"text",
     success: function(data) {
-    $("#result").text(data.result);
+    $("#result").text(data);
     },
     error: function(x,y,z) {
     console.log(x);
