--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -21,7 +21,7 @@
     processData: "true",
     data: {proglang: $('input[name="proglang"]').val()},
     dataType:"json",
-    success: function(data) {
+    success: function(data.race_name) {
     $("#result").text(data);
     },
     error: function(x,y,z) {
