--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -21,8 +21,8 @@
     processData: "true",
     data: {proglang: $('input[name="proglang"]').val()},
     dataType:"json",
-    success: function(data.race_name) {
-    $("#result").text(data);
+    success: function(data) {
+    $("#result").text(data.race_name);
     },
     error: function(x,y,z) {
     console.log(x);
