--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -10,6 +10,7 @@
                 <input type="text" size="5" name="proglang" id="text_input">
                 <a href="#" id="process_input"><button class="btn btn-default">Submit</button></a>
             </form>
+        <h3>{{ race_name }}</h3>
         <p id="result"></p>
     </div>
 <script>
