--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -23,7 +23,7 @@
     data: {proglang: $('input[name="proglang"]').val()},
     dataType:"json",
     success: function(data) {
-    $("#result").text(data);
+    $("#result").text(data._id.race_name);
     },
     error: function(x,y,z) {
     console.log(x);
