--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -7,7 +7,7 @@
     <div class="container">
         <h3>Welcome!  Best programming language</h3>
             <form>
-                <input type="text" size="5" name="proglang" id="text_input">
+                <input type="text" size="15" name="proglang" id="text_input">
                 <a href="#" id="process_input"><button class="btn btn-default">Submit</button></a>
             </form>
         <h4>{{ race_name }}</h4>
@@ -23,7 +23,7 @@
     data: {proglang: $('input[name="proglang"]').val()},
     dataType:"json",
     success: function(data) {
-    $("#result").text(data["race_name"]);
+    $("#result").text(data[0]["race_name"]);
     },
     error: function(x,y,z) {
     console.log(x);
