--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -10,6 +10,11 @@
                 <input type="text" size="15" name="proglang" id="text_input">
                 <a href="#" id="process_input"><button class="btn btn-default">Submit</button></a>
             </form>
+            <form>
+                <select class="custom-select" id="series_drop_down" name="series_drop_down">
+                <option>Choose Series</option>
+                </select>
+            </form>
         <h4>{{ race_name }}</h4>
         <p id="result"></p>
     </div>
@@ -23,13 +28,17 @@
     data: {proglang: $('input[name="proglang"]').val()},
     dataType:"json",
     success: function(data) {
-    $("#result").text(data[0]["race_name"]);
-    },
-    error: function(x,y,z) {
-    console.log(x);
-    console.log(y);
-    console.log(z);
-    }
+    $select.find('option').remove();
+    $.each(data, function($(this)["race_name"], val) {
+      $('<option>').val($(this)["race_name").text(val).appendTo($('#series_drop_down');
+
+    //$("#series_drop_down").text(data[0]["race_name"]);
+    //},
+    //error: function(x,y,z) {
+    //console.log(x);
+    //console.log(y);
+    //console.log(z);
+    //}
     });
    // $.getJSON('/backgroundProcess', {
    // 'proglang' : $('input[name="proglang"]').val(),
