--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -29,7 +29,7 @@
     dataType:"json",
     success: function(data) {
     $select.find('option').remove();
-    $.each(data, function($(this).racename, val) {
+    $.each(data, function($this.racename, val) {
       $('<option>').val($this.race_name).text(val).appendTo($('#series_drop_down');
 
     //$("#series_drop_down").text(data[0]["race_name"]);
