--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -30,7 +30,7 @@
     success: function(data) {
     $select.find('option').remove();
     $.each(data, function($this, val) {
-      $('<option>').val($this).text(val).appendTo($('#series_drop_down');
+      $('<option>').val($this).text(val).appendTo($('#series_drop_down'));
 
     //$("#series_drop_down").text(data[0]["race_name"]);
     //},
