--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -32,7 +32,7 @@
                 $.each(data, function($this, val) {
                     $('<option>').val($this).text(val).appendTo($('#series_drop_down'));
                     });  // end each
-            };  //end success
+            }  //end success
             });  //end ajax
         });  // end process input
     });  //end ready
