--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -28,7 +28,7 @@
             data: {proglang: $('input[name="proglang"]').val()},
             dataType:"json",
             success: function(data) {
-                $select.find('option').remove();
+                //$select.find('option').remove();
                 $.each(data, function($this, val) {
                     $('<option>').val($this).text(val).appendTo($('#series_drop_down'));
                     });  // end each
