--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -29,8 +29,9 @@
             dataType:"json",
             success: function(data) {
                 //$select.find('<option>').remove();
+                var list = $("series_drop_down");
                 $.each(data, function(key, val) {
-                    $('<option>').val(key).text(val).appendTo($('#series_drop_down'));
+                    list.append(new Option(key.text, val.value));
                     });  // end each
             }  //end success
             });  //end ajax
