--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -33,7 +33,7 @@
                 $.each(data, function(key, val) {
                     race_data += '<option>'+val.race_name+'</option>';
                 });  // end each
-                $('#series_drop_down").append(race_data);
+                $('#series_drop_down').append(race_data);
             }  //end success
             });  //end ajax
         });  // end process input
