--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -31,7 +31,7 @@
                 //$select.find('<option>').remove();
                 var race_data = '';
                 $.each(data, function(key, value) {
-                    race_data += '<option>'+key["race_name"]+'</option>';
+                    race_data += '<option>'+value+'</option>';
                 });  // end each
                 $('#series_drop_down').append(race_data);
             }  //end success
