--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -32,7 +32,7 @@
                 var race_data = '';
                 one_race = data[0]
                 $.each(one_race, function(key, value) {
-                    race_data += '<option>'+value["race_name"]+'</option>';
+                    race_data += '<option>'+value.race_name+'</option>';
                 });  // end each
                 $('#series_drop_down').append(race_data);
             }  //end success
