--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -31,8 +31,9 @@
                 //$select.find('<option>').remove();
                 var race_data = '';
                 one_race = data[0]
-                $.each(one_race, function(key, value) {
-                    race_data += '<option>'+value.race_name+'</option>';
+                race_name = one_race["race_name"]
+                $.each(race_name, function(key, value) {
+                    race_data += '<option>'+value+'</option>';
                 });  // end each
                 $('#series_drop_down').append(race_data);
             }  //end success
