--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -31,7 +31,7 @@
                 //$select.find('<option>').remove();
                 var race_data = '';
                 var one_race = data[0];
-                race_name = one_race["race_name"]
+                var race_name = one_race["race_name"]
                 $.each(race_name, function(key, value) {
                     race_data += '<option>'+value+'</option>';
                 });  // end each
