--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -29,7 +29,7 @@
             dataType:"json",
             success: function(data) {
                 //$select.find('<option>').remove();
-                $.each(JSON.parse(data), function(key, value) {
+                $.each(data, function(key, value) {
                     race_data += '<option>'+value.race_name+'</option>';
                 });  // end each
                 $('#series_drop_down').append(race_data);
