--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -31,7 +31,7 @@
                 race_data = '';
                 //$select.find('<option>').remove();
                 $.each(data, function(key, value) {
-                    race_data += '<option>'+value["race_name"]+'</option>';
+                    race_data += '<option>'+value.race_name+'</option>';
                 });  // end each
                 $('#series_drop_down').append(race_data);
             }  //end success
