--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -15,7 +15,7 @@
                 <option>Choose Series</option>
                 </select>
             </form>
-        <h4>{{ ser_list }}</h4>
+        <h4>{{ ser_list[15]["race_name"] }}</h4>
         <p id="result"></p>
     </div>
 <script>
