--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -17,6 +17,7 @@
             </form>
         <h4>{{ ser_list[15]["race_name"] }}</h4>
         <p id="result"></p>
+        <div class="inner">hello</div>
     </div>
 <script>
     $(document).ready(function() {
@@ -28,12 +29,13 @@
             data: {proglang: $('input[name="proglang"]').val()},
             dataType:"json",
             success: function(data) {
-                race_data = '';
+                $(".inner").append("<p>test</>");
+                //race_data = '';
                 //$select.find('<option>').remove();
-                $.each(data, function(key, value) {
-                    race_data += '<option>'+value.race_name+'</option>';
+                //$.each(data, function(key, value) {
+                //    race_data += '<option>'+value.race_name+'</option>';
                 });  // end each
-                $('#series_drop_down').append(race_data);
+                //$('#series_drop_down').append(race_data);
             }  //end success
             });  //end ajax
         });  // end process input
