--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -34,7 +34,7 @@
                 //$select.find('<option>').remove();
                 //$.each(data, function(key, value) {
                 //    race_data += '<option>'+value.race_name+'</option>';
-                });  // end each
+                //});  // end each
                 //$('#series_drop_down').append(race_data);
             }  //end success
             });  //end ajax
