--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -29,8 +29,8 @@
             data: {proglang: $('input[name="proglang"]').val()},
             dataType:"json",
             success: function(data) {
-                var stuff = data[1]
-                $(".inner").append("<p>stuff</>");
+                //var stuff = data
+                $(".inner").append("<p>data</>");
                 //race_data = '';
                 //$select.find('<option>').remove();
                 //$.each(data, function(key, value) {
