--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -30,7 +30,7 @@
             dataType:"json",
             success: function(data) {
                 //var stuff = data
-                $(".inner").append("<p>data</>");
+                $(".inner").append("<p>data.values()</>");
                 //race_data = '';
                 //$select.find('<option>').remove();
                 //$.each(data, function(key, value) {
