--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -30,6 +30,7 @@
             dataType:"json",
             success: function(data) {
                 //var stuff = data
+                console.log(data)
                 $(".inner").append("<p>data.values()</>");
                 //race_data = '';
                 //$select.find('<option>').remove();
