--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -31,7 +31,7 @@
             success: function(data) {
                 //var stuff = data
                 console.log(data);
-                console.log(data[0];
+                console.log(data[0]);
                 $(".inner").append("<p>data.values()</>");
                 //race_data = '';
                 //$select.find('<option>').remove();
