--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -32,7 +32,7 @@
                 //var stuff = data
                 console.log(data);
                 console.log(data[40].race_name);
-                $(".inner").append("<p>test</p>");
+                $(".inner").html("<p>test</p>");
                 //race_data = '';
                 //$select.find('<option>').remove();
                 //$.each(data, function(key, value) {
