--- a/src/templates/interactive.html
+++ b/src/templates/interactive.html
@@ -32,7 +32,7 @@
                 var stuff = data[40].race_name
                 console.log(data);
                 console.log(data[40].race_name);
-                $("#inner").innerHTML = stuff;
+                $("#inner").innerHTML = str(stuff);
                 //race_data = '';
                 //$select.find('<option>').remove();
                 //$.each(data, function(key, value) {
